--- a/LMSGroupOne/Views/Authors/List.cshtml
+++ b/LMSGroupOne/Views/Authors/List.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<LMS.Core.Models.ViewModels.AuthorsViewmodel>
-@using LMSGroupOne.Models.MainNavigation
+
 @{
     ViewData["Title"] = "GetAuthors";
 }
@@ -12,9 +12,9 @@
 </p>
 
 
-<button id="createAuthorId" data-item-id="1" data-item-type=@((int)NodeType.author) class="btn btn-outline-primary">Create</button>
 
-<table class="table">
+
+<table class="table m-0 b-0">
     <thead>
         <tr>
             <th>
