--- a/LMSGroupOne/Views/MainNavigation/Index.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/Index.cshtml
@@ -31,7 +31,7 @@
         </div>
 
         @*the main content section*@
-        <div class="col-8 p-0 m-0">
+        <div class="col-8 p-0 m-0 h-100">
 
             @await Html.PartialAsync("_MainContentPartial")
 
