--- a/LMSGroupOne/Views/Assignment/Details.cshtml
+++ b/LMSGroupOne/Views/Assignment/Details.cshtml
@@ -50,9 +50,20 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DocumentTimeStamp)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Documents)
+        </dt>
+        <dd class="col-sm-10">
+            @{
+                foreach (var item in Model.Documents)
+                {
+                    @Html.DisplayFor(model => item.Name)
+                }
+            }
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-controller="Document" asp-action="UploadActivityDocument" asp-route-id="@Model.ActivityId">Upload</a> |
-    <a asp-controller="Assignment" asp-action="Index">Back to List</a>
+    <a class="btn btn-outline-primary float-lg-left" asp-controller="Document" asp-action="UploadActivityDocuments" asp-route-id="@Model.ActivityId" role="button">Upload</a>
+    <a class="btn btn-outline-primary float-lg-left" asp-controller="Assignment" asp-action="Index" role="button">My assignments</a>
 </div>
