--- a/LMSGroupOne/Views/Shared/_Layout.cshtml
+++ b/LMSGroupOne/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="https://kit.fontawesome.com/b28da008da.js" crossorigin="anonymous"></script>
 </head>
 <body class="container-fluid m-0 p-0">
     <header id="headerBarId" class="container-fluid m-0 p-0">
