--- a/LMSGroupOne/Views/Authors/Search.cshtml
+++ b/LMSGroupOne/Views/Authors/Search.cshtml
@@ -38,7 +38,10 @@
             </div>
         </div>
     </div>
-    <button id="createAuthorId" data-item-id="1" data-item-type=@((int)NodeType.author) class="btn btn-outline-primary">Create</button>
+    @if (User.IsInRole("Teacher"))
+    {
+        <button id="createAuthorId" data-item-id="1" data-item-type=@((int)NodeType.author) class="btn btn-outline-primary">Create</button>
+    }
 </div>
 
 
