--- a/LMSGroupOne/Views/MainNavigation/StudentTeacher.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/StudentTeacher.cshtml
@@ -8,4 +8,9 @@
     <H1>@Model.Name</H1>
     <H2>Email: @Model.Email</H2>
 
+    @if (User.IsInRole("Teacher"))
+    {
+        <button id="editButtonId" data-item-id=@Model.Id data-item-type=@((int)(NodeType.student)) class="btn btn-outline-primary">Edit</button>
+    }
+
 </div>
