--- a/LMSGroupOne/Views/Assignment/IndexStudent.cshtml
+++ b/LMSGroupOne/Views/Assignment/IndexStudent.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AssignmentViewModel>
+﻿@model IEnumerable<AssignmentIndexStudentViewModel>
 
 @{
     ViewData["Title"] = "My assignments";
