better looking Search and List for Library

--- a/LMSGroupOne/Views/Authors/List.cshtml
+++ b/LMSGroupOne/Views/Authors/List.cshtml
@@ -5,14 +5,7 @@
 }
 
 
-<h1>Authors</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-
-
-
+<h1>Search Results <i>@TempData["SearchTerm"]</i></h1>
 
 <table class="table m-0 b-0">
     <thead>
