--- a/LMSGroupOne/Views/Authors/GetAuthors.cshtml
+++ b/LMSGroupOne/Views/Authors/GetAuthors.cshtml
@@ -38,7 +38,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @*@foreach (var item in Model)
         {
             <tr>
                 <td>
@@ -61,7 +61,7 @@
                     @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                     @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
                     @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                    @Html.ActionLink("Get works", "GetWorks", "Works", new { id = item.Id })
+                    @Html.ActionLink("Get works", "GetWorks", "Works", new { id = item.Id })*@
 @foreach (var item in Model) {
         <tr>
             <td>
