--- a/LMSGroupOne/Views/Assignment/IndexStudent.cshtml
+++ b/LMSGroupOne/Views/Assignment/IndexStudent.cshtml
@@ -7,6 +7,7 @@
 
 @if (User.IsInRole("Student"))
 {
+    <h4>@ViewData["Title"]</h4>
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="table-responsive">
@@ -48,4 +49,4 @@
             </div>
         </div>
     </div>
- }
+}
