--- a/LMSGroupOne/Views/Authors/Search.cshtml
+++ b/LMSGroupOne/Views/Authors/Search.cshtml
@@ -37,6 +37,7 @@
                     <!--end of col-->
                 </div>
                 <div class="ml-1">Order on Age?<input class="ml-1" type="checkbox" id="ageOrdered" value="TRUE"></div>
+                <div class="ml-1">Order on Name?<input class="ml-1" type="checkbox" id="nameOrdered" value="TRUE"></div>
             </form>
                 @*<p>Order on Age? @Html.CheckBoxFor(s=>s.OrderOnAge) </p>*@
 
