minor design change

--- a/LMSGroupOne/Views/MainNavigation/_TreeViewPartial.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/_TreeViewPartial.cshtml
@@ -20,8 +20,8 @@
 
 
 
-<div id="menuDivId" style="padding: 0px; border: 0px; background-color: none; overflow-y: scroll; overflow-x:auto; position:absolute; width:100%;">
-    <div id="toolBarId">
+<div id="menuDivId" style="padding: 0px; border: 0px; overflow-y: scroll; overflow-x: auto; background-color: #ffffff22; position: absolute; width: 100%;">
+    <div id="toolBarId" class="container border-bottom">
         <i id="trashCanId" class="fa fa-trash-alt" data-item-type="@NodeType.trash" style="font-size:48px;color:black; padding:4px;"></i>
 
     </div>
