--- a/LMSGroupOne/Views/Assignment/Details.cshtml
+++ b/LMSGroupOne/Views/Assignment/Details.cshtml
@@ -64,6 +64,6 @@
     </dl>
 </div>
 <div>
-    <a class="btn btn-outline-primary float-lg-left" asp-controller="Document" asp-action="UploadActivityDocuments" asp-route-id="@Model.ActivityId" role="button">Upload</a>
-    <a class="btn btn-outline-primary float-lg-left" asp-controller="Assignment" asp-action="Index" role="button">My assignments</a>
+    <a class="btn btn-outline-primary float-lg-left" asp-controller="Assignment" asp-action="UploadActivityDocuments1" asp-route-id="@Model.ActivityId" role="button">Upload</a>
+    <a class="btn btn-outline-primary float-lg-left" asp-controller="Assignment" asp-action="IndexStudent" role="button">My assignments</a>
 </div>
