--- a/LMSGroupOne/Views/Assignment/IndexStudent.cshtml
+++ b/LMSGroupOne/Views/Assignment/IndexStudent.cshtml
@@ -40,7 +40,7 @@
                                     @Html.DisplayFor(modelItem => item.EndDate)
                                 </td>
                                 <td>
-                                    <a class="btn btn-outline-primary" asp-controller="Document" asp-action="UploadActivityDocuments" asp-route-id="@item.ActivityId" role="button"><i class="fas fa-upload"></i> Submit</a>
+                                    <a class="btn btn-outline-primary" asp-controller="Document" asp-action="UploadActivityDocuments1" asp-route-id="@item.ActivityId" role="button"><i class="fas fa-upload"></i> Submit</a>
                                 </td>
                             </tr>
                         }
