--- a/LMSGroupOne/Views/Document/UploadActivityDocuments.cshtml
+++ b/LMSGroupOne/Views/Document/UploadActivityDocuments.cshtml
@@ -1,68 +1,34 @@
 ﻿@model UploadActivityDocumentsViewModel
 
-@{
-    ViewData["Title"] = "Upload activity documents";
-}
-
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form method="post" enctype="multipart/form-data" asp-controller="Document" asp-action="UploadActivityDocuments" name="UploadActivityDocumentsForm" onsubmit="return validateForm()">
-            <h4>Upload activity documents</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="PostedDocuments"></label>
-                <input type="file" name="postedDocuments" id="postedDocuments" class="form-control" multiple />
-            </div>
-            <div class="form-group">
-                <label asp-for="Description"></label>
-                <input asp-for="Description" class="form-control" />
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Upload" class="btn btn-primary" />
-                <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Cancel</a>
-            </div>
-        </form>
+<form method="post" enctype="multipart/form-data" asp-controller="Document" asp-action="UploadActivityDocuments" name="UploadActivityDocumentsForm" onsubmit="return validateForm()">
+    <input type="hidden" asp-for="Id" />
+    <input type="hidden" asp-for="Success" />
+    <input type="hidden" asp-for="ReturnId" />
+    <input type="hidden" asp-for="Message" />
+    <input type="hidden" asp-for="PersonReturnId" />
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-group">
+        <label asp-for="Name"></label>
+        <input asp-for="Name" class="form-control" />
     </div>
-</div>
-
-<div class="modal fade" id="uploadActivityDocumentsResult" tabindex="-1" role="dialog" aria-labelledby="aModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header"><h5 class="modal-title" id="aModalLabel">Result</h5></div>
-            <div class="modal-body">@ViewBag.Result</div>
-            <div class="modal-footer">
-                <a asp-controller="Document" asp-action="UploadActivityDocuments">More uploads to the same activity</a>
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-            </div>
-
-        </div>
+    <div class="form-group">
+        <label asp-for="PostedDocuments"></label>
+        <input type="file" name="postedDocuments" id="postedDocuments" class="form-control" multiple />
     </div>
-</div>
-
-@{
-    if (ViewBag.Result != null)
-    {
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-        <script type="text/javascript">
-            $(function () {
-            $("#uploadActivityDocumentsResult").modal('show');
-            });
-        </script>
-    }
-}
+    <div class="form-group">
+        <label asp-for="Description"></label>
+        <input asp-for="Description" class="form-control" />
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Upload" class="btn btn-primary" />
+        <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Cancel</a>
+    </div>
+</form>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 
     <script type="text/javascript">
-    setTimeout(function () {
-        $("#uploadÁctivityDocumentsResult").modal('hide')
-    }, 4000);
-
     function validateForm() {
         var x = document.forms["UploadActivityDocumentsForm"]["postedDocuments"].value;
         if (x == "") {
