--- a/LMSGroupOne/Views/MainNavigation/Activity.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/Activity.cshtml
@@ -13,7 +13,8 @@
 
     @if (User.IsInRole("Teacher"))
     {
-        <button id="editButtonId" data-item-id=@Model.Id data-item-type=@((int)(NodeType.activity)) class="btn btn-outline-primary">Edit</button>
+        <button id="editButtonId" data-item-id=@Model.Id data-item-type=@((int)(NodeType.activity)) class="btn btn-outline-primary">Edit</button><br /><br />
+        <button id="uploadActivityDocumentsButtonId" data-item-id=@Model.Id data-item-type=@((int)(NodeType.fileactivity)) class="btn btn-outline-primary">Upload</button>
     }
 
 </div>
