--- a/LMSGroupOne/Views/Module/CreateModule.cshtml
+++ b/LMSGroupOne/Views/Module/CreateModule.cshtml
@@ -3,6 +3,8 @@
 <div>Course: @ViewBag.courseName</div>
 <div>Dates: @ViewBag.courseDates</div>
 <div><br /></div>
+@Html.ValidationSummary(false, "", new { @class = "text-danger" })
+
 <form id="formId" asp-action="CreateModule">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="CourseId" />
@@ -13,22 +15,18 @@
 
         <label asp-for="Name" class="control-label">Module Name</label>
         <input asp-for="Name" class="form-control" />
-        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Description" class="control-label"></label>
         <input asp-for="Description" class="form-control" />
-        <span asp-validation-for="Description" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="StartDate" class="control-label"></label>
         <input asp-for="StartDate" class="form-control" />
-        <span asp-validation-for="StartDate" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="EndDate" class="control-label"></label>
         <input asp-for="EndDate" class="form-control" />
-        <span asp-validation-for="EndDate" class="text-danger"></span>
     </div>
 
     @Html.DisplayFor(model => model.Message)
