--- a/LMSGroupOne/Views/Module/EditModule.cshtml
+++ b/LMSGroupOne/Views/Module/EditModule.cshtml
@@ -3,6 +3,8 @@
 <div>Course: @ViewBag.courseName</div>
 <div>Dates: @ViewBag.courseDates</div>
 <div><br /></div>
+@Html.ValidationSummary(false, "", new { @class = "text-danger" })
+
 
 <div>
     <form id="formId" asp-action="EditModule">
@@ -16,24 +18,20 @@
         <div class="form-group">
             <label asp-for="Name" class="control-label"></label>
             <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Description" class="control-label"></label>
             <input asp-for="Description" class="form-control" />
-            <span asp-validation-for="Description" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="StartDate" class="control-label"></label>
             <input asp-for="StartDate" class="form-control" />
-            <span asp-validation-for="StartDate" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="EndDate" class="control-label"></label>
             <input asp-for="EndDate" class="form-control" />
-            <span asp-validation-for="EndDate" class="text-danger"></span>
         </div>
-       
+
         @Model.Message
     </form>
 </div>
