added authorscontroller function

--- a/LMSGroupOne/Views/Authors/List.cshtml
+++ b/LMSGroupOne/Views/Authors/List.cshtml
@@ -53,10 +53,10 @@
 
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                    @*@Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                     @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
                     @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                    @Html.ActionLink("Get works", "GetWorks", "Works", new { id = item.Id })
+                    @Html.ActionLink("Get works", "GetWorks", "Works", new { id = item.Id })*@
 
                 </td>
             </tr>
