--- a/LMSGroupOne/Views/Authors/GetAuthors.cshtml
+++ b/LMSGroupOne/Views/Authors/GetAuthors.cshtml
@@ -83,7 +83,7 @@
             @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
             @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
             @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            @Html.ActionLink("Get works", "GetAuthor", new { id = item.Id, includeWorks=true })
+            @Html.ActionLink("Get works", "GetAuthorAndWorks", new { id = item.Id })
             @*@Html.ActionLink("Get works", "GetWorks", "Works", new { id=item.Id })*@
 
                 </td>
