--- a/LMSGroupOne/Views/Authors/GetAuthors.cshtml
+++ b/LMSGroupOne/Views/Authors/GetAuthors.cshtml
@@ -8,7 +8,7 @@
 <h1>Authors</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create2">Create New</a>
 </p>
 
 
@@ -80,9 +80,9 @@
             @Html.DisplayFor(modelItem => item.DateOfDeath)
         </td>*@
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+            @*@Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
             @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
             @Html.ActionLink("Get works", "GetAuthorAndWorks", new { id = item.Id })
             @*@Html.ActionLink("Get works", "GetWorks", "Works", new { id=item.Id })*@
 
