--- a/LMSGroupOne/Views/Authors/Create2.cshtml
+++ b/LMSGroupOne/Views/Authors/Create2.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create2">
+        <form asp-action="CreateAuthor2">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
@@ -32,9 +32,9 @@
                 <input asp-for="DateOfDeath" class="form-control" />
                 <span asp-validation-for="DateOfDeath" class="text-danger"></span>
             </div>
- 
+
             <div class="form-group">
-                <input type="submit" value="Create2" class="btn btn-primary" />
+                <input type="submit" value="CreateAuthor2" class="btn btn-primary" />
             </div>
         </form>
     </div>
